# BlueWard

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  RALPH_PROMPT.md  README.md  auralock-research.md  blueward.service  config.toml  install.sh  prd.json  pyproject.toml  uninstall.sh
blueward/: __init__.py  __main__.py  config.py  devices.py  fallback.py  filter.py  notifier.py  proximity.py  scanner.py  screen.py  service.py  setup.py  tray.py
contrib/: blueward.service
tests/: test_config.py  test_devices.py  test_filter.py  test_proximity.py  test_screen.py  test_service.py
